--- a/index.ipynb
+++ b/index.ipynb
@@ -11,6 +11,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Project Overview\n",
+    "This project uses machine learning algorithms to build a model that can accurately predict customers who will churn based on the information available in the dataset. The dataset has 20 predictor variables mostly about customer usage patterns. There are 3333 records in this dataset, out of which 483 customers are churners and the remaining 2850 are non-churners. The target variable is 'churn'. Since the target variable is a categorical variable, classification algorithms are used to build the predictive model. Recall is used to evaluate the model's performance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Objectives\n",
+    "To build a machine learning model that can accurately predict customers who will churn based on the information available in the dataset.\n",
+    "\n",
+    "To identify the features that are important for predicting customer churn."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Importing libraries"
    ]
   },
@@ -1368,7 +1386,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A clear correlation appears to exist between churn values and customer support calls. Customers are far more likely to stop using their service after four calls.\n"
+    "* A clearrelationshipappears to exist between churn values and customer support calls. Customers are far more likely to stop using their service after four calls.\n"
    ]
   },
   {
@@ -1401,6 +1419,44 @@
     "sns.heatmap(corr_mat, annot=True, cmap='Greens', square=True,fmt='.0g');\n",
     "plt.xticks(rotation=90);\n",
     "plt.yticks(rotation=0);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "churn                     1.000000\n",
+       "customer service calls    0.208750\n",
+       "total day minutes         0.205151\n",
+       "total day charge          0.205151\n",
+       "total eve minutes         0.092796\n",
+       "total eve charge          0.092786\n",
+       "total intl charge         0.068259\n",
+       "total intl minutes        0.068239\n",
+       "total night charge        0.035496\n",
+       "total night minutes       0.035493\n",
+       "total day calls           0.018459\n",
+       "account length            0.016541\n",
+       "total eve calls           0.009233\n",
+       "area code                 0.006174\n",
+       "total night calls         0.006141\n",
+       "total intl calls         -0.052844\n",
+       "number vmail messages    -0.089728\n",
+       "Name: churn, dtype: float64"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['churn'] = df['churn'].astype(int)\n",
+    "df.corr()['churn'].sort_values(ascending=False)"
    ]
   },
   {
@@ -2996,6 +3052,30 @@
     "F1 score  answers the question of what percent of positive predictions were correct? On this, the model captures ~97% of correct positive predictions.\n",
     "\n",
     "Accuracy, as its name implies, takes into account the model's overall accuracy, however this is only true when the model is balanced. This model balances for the situation at hand, accurately projecting the outcomes 94% of the time.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conslusion\n",
+    "\n",
+    "From our final model we hve established that the most important features in our datasets include:\n",
+    " * Total day charge\n",
+    " * Total day minutes \n",
+    " * Customer service calls\n",
+    " \n",
+    " Region did not appear to have much influence on customer churn.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Recommendation\n",
+    "The telecom company should conduct further research to ensure their heavy daytime minute user, international plan users, and customers who call customer service are satisfied with their service.\n",
+    "Syriatel should ensure effective customer service so as to meet customers' expectations and analyze customer interactions. They can then follow up on both positive and negative feedbacks received.\n",
+    "The more the number of minutes the customer spends on the phone, the higher the likelihood of not churning. The company should look into the call charge rates in comparison to the competitors, and consider if they should lower the charges of calls per minute. This can prevent other customers from churning.\n"
    ]
   }
  ],
